--- a/app/frontend/packs/styles/components/_dashboard.scss
+++ b/app/frontend/packs/styles/components/_dashboard.scss
@@ -76,7 +76,7 @@
   h2 {
     border: unset;
     box-sizing: border-box;
-    color: colors.$background-color;
+    color: colors.$inverse-font;
 
     display: none;
     font-size: 22px;
@@ -119,7 +119,7 @@
 
   &:hover {
     background-color: colors.$sidebar-highlight;
-    color: colors.$background-color;
+    color: colors.$inverse-font;
   }
 }
 
@@ -138,7 +138,7 @@
 
   &:hover {
     background-color: colors.$background-dark;
-    color: colors.$background-color;
+    color: colors.$inverse-font;
     cursor: pointer;
   }
 
