--- a/app/frontend/packs/styles/components/_navbar.scss
+++ b/app/frontend/packs/styles/components/_navbar.scss
@@ -190,7 +190,7 @@ $btn-hover-animation: 0.2s;
 
     &:hover {
       background-color: colors.$nav-button-hover;
-      color: colors.$light;
+      color: colors.$inverse-font;
     }
   }
 
